--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phytochem - Pesquisa e Desenvolvimento para Produtos Naturais</title>
+    <title>Phytochem - Pesquisa e Desenvolvimento em Produtos Naturais</title>
     <meta name="description"
         content="Empresa de consultoria técnico-científica especializada em pesquisa e desenvolvimento de produtos naturais, avaliação de estabilidade e controle de qualidade.">
     <meta name="keywords"
@@ -340,6 +340,7 @@
                 <br>
                 <span class="material-symbols-outlined contato-footer-icone">mail </span>
                 <span class="contato-footer-texto">comercial@phytochem.com.br</span>
+                
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/company/phytochemlab/" target="_blank"><img src="img/linkedin.png" alt="LinkedIn"></a>
                     <a href="https://www.instagram.com/phytochem.servicos/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
@@ -350,7 +351,7 @@
         </div>
         <div class="footer-bottom">
             <span>
-                <p> Phytochem ©2025. Todos os direitos reservados&nbsp;
+                <p> ©2025 Phytochem. Todos os direitos reservados&nbsp;
                     <a href="https://commit.dev.br/" target="_blank"> Design: Commit.dev</a>
                 </p>
             </span>
