--- a/index.html
+++ b/index.html
@@ -68,14 +68,12 @@
 
             <div class="inicio-content1">
                 <img src="img/logo-vert-blue.png" alt="Banner Phytochem" class="banner-img">
-                <h1>Laboratório de Análise, Pesquisa e Desenvolvimento para Produtos Naturais</h1>
+                <h1>Laboratório de Análise, Pesquisa e Desenvolvimento em Produtos Naturais</h1>
 
             </div>
 
             <div class="inicio-content2">
-                <p>Consultoria técnico-científica que atua em pesquisa de desenvolvimento de produtos naturais,
-                    avaliação de
-                    estabilidade e controle de qualidade.</p>
+                <p>Consultoria técnico-científica que atua em pesquisa e desenvolvimento de produtos naturais, avaliação de  estabilidade e análises de controle de qualidade.</p>
             </div>
 
         </div>
@@ -101,13 +99,8 @@
 
             <div class="sobre-texto1">
 
-                <p>A Phytochem nasceu com proposito de unir o potencial da biodiversidade brasileira à tecnologia de ponta, criando soluções naturais que revolucionam os mercados farmacêutico, cosmético e de
-                    alimentos. Com mais de 30 anos de expertise, estamos comprometidos em transformar os ativos da
-                    natureza em inovação que promove saúde, beleza e sustentabilidade. <br>
-                    Nossa missão vai além da produção de extratos botânicos de alta qualidade. Através de práticas
-                    responsáveis e de um profundo respeito pela biodiversidade, buscamos construir um futuro onde a
-                    ciência e a natureza caminham juntas. Cada produto Phytochem é resultado de pesquisas avançadas,
-                    processos sustentáveis e um compromisso inabalável com a excelência.</p>
+                <p>A Phytochem nasceu com proposito de unir o potencial da biodiversidade brasileira à tecnologia de ponta, criando soluções naturais que revolucionam os mercados farmacêutico, cosmético e de alimentos. Com mais de 30 anos de expertise, estamos comprometidos em transformar os ativos da natureza em inovação que promove saúde, beleza e sustentabilidade. <br>
+                Nossa missão vai além da produção de extratos botânicos de alta qualidade. Através de práticas responsáveis e de um profundo respeito pela biodiversidade, buscamos construir um futuro onde a ciência e a natureza caminham juntas. Cada produto Phytochem é resultado de pesquisas avançadas, processos sustentáveis e um compromisso inabalável com a excelência.</p>
                 <img src="img/img1.jpg" alt="Sobre Nós" class="sobre-img1">
             </div>
 
